[project]
name = "github-trending"
version = "0.1.0"
description = "Tracking the most popular Github repos, updated daily"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Saurabh Kumar"},
]
dependencies = [
    "cssselect>=1.0",
    "lxml>=4.0",
    "pyquery>=1.4",
    "requests>=2.20",
    "schedule>=1.0",
]

[project.urls]
Homepage = "https://github.com/theskumar/github-trending"
Issues = "https://github.com/theskumar/github-trending/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
